membrane/tests/ui/stream.stderr
error: expected `impl Stream<Item = Result>`
 --> tests/ui/stream.rs:2:30
  |
2 | pub fn one_failure() -> impl Stream<i32, String> {}
  |                              ^^^^^^

error: expected enum `Result`
 --> tests/ui/stream.rs:5:44
  |
5 | pub fn two_failure() -> impl Stream<Item = i32, String> {}
  |                                            ^^^
